@@ -15,7 +15,7 @@ use OpenTelemetry::Constants qw( SPAN_KIND_CLIENT SPAN_STATUS_ERROR );
 use OpenTelemetry::Context;
 use OpenTelemetry::Trace;
 use OpenTelemetry;
-use Ref::Util 'is_arrayref';
+use Ref::Util qw( is_arrayref is_coderef );
 use Syntax::Keyword::Dynamically;
 
 use parent 'OpenTelemetry::Integration';
@@ -98,11 +98,11 @@ sub install ( $class, %config ) {
                     'http.request.header'
                 ),
 
-                # Request body can be generated with a data_callback
-                # parameter, in which case we don't set this attribute
+                # Request body can be generated by setting content to a
+                # code reference, in which case we don't set this attribute
                 # Setting it would likely involve us hooking into the
                 # handle's write_body method
-                $options->{content}
+                defined $options->{content} && ! is_coderef $options->{content}
                     ? ( 'http.request.body.size' => length $options->{content} )
                     : (),
             },
