@@ -5,6 +5,9 @@ Revision history for OpenTelemetry
     * Leave the status of a span unset on success responses in the
       HTTP::Tiny and LWP::UserAgent integrations. This behaviour matches
       the OpenTelemetry specification.
+    * Fixed an issue in the HTTP::Tiny integration where the content size
+      of requests with a content callback was incorrectly reported. It is
+      now not reported at all.
 
 0.020     2024-04-25 18:54:56+01:00 Europe/London
 
